assets/css/main.css
/* ... */
/* Section/Article */

section.special,
article.special {
	text-align: center;
}

header p {
	color: rgba(255, 255, 255, 0.5);
	position: relative;
	top: -0.25em;
}

header h3+p {
	font-size: 1.1em;
}

header h4+p,
header h5+p,
header h6+p {
	font-size: 0.9em;
}

header.major {
	margin: 0 0 3.5em 0;
}

header.major h2,
header.major h3,
header.major h4,
header.major h5,
header.major h6 {
	border-bottom: solid 2px #fff;
	display: inline-block;
	padding-bottom: 1em;
	position: relative;
}

header.major h2:after,
header.major h3:after,
header.major h4:after,
header.major h5:after,
header.major h6:after {
	content: '';
	display: block;
	height: 1px;
}

header.major p {
	color: #fff;
	top: 0;
}

@media screen and (max-width: 736px) {

	header.major {
		margin: 0 0 2em 0;
	}

}

@media screen and (max-width: 980px) {

	header br {
		display: none;
	}

}

/* Form */

form {
	margin: 0 0 2em 0;
}

label {
	color: #fff;
	display: block;
	font-size: 0.9em;
	font-weight: 600;
	margin: 0 0 1em 0;
}

input[type="text"],
input[type="password"],
input[type="email"],
select,
textarea {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
	background-color: rgba(144, 144, 144, 0.25);
	border-radius: 3px;
	border: none;
	color: inherit;
	display: block;
	outline: 0;
	padding: 0 1em;
	text-decoration: none;
	width: 100%;
}

input[type="text"]:invalid,
input[type="password"]:invalid,
input[type="email"]:invalid,
select:invalid,
textarea:invalid {
	box-shadow: none;
}

input[type="text"]:focus,
input[type="password"]:focus,
input[type="email"]:focus,
select:focus,
textarea:focus {
	box-shadow: 0 0 0 2px #21b2a6;
}

select {
	background-size: 1.25em;
	background-repeat: no-repeat;
	background-position: calc(100% - 1em) center;
	height: 2.75em;
	padding-right: 2.75em;
	text-overflow: ellipsis;
}

select:focus::-ms-value {
	background-color: transparent;
}

select::-ms-expand {
	display: none;
}

input[type="text"],
input[type="password"],
input[type="email"],
select {
	height: 2.75em;
}

textarea {
	padding: 0.75em 1em;
}

input[type="checkbox"],
input[type="radio"] {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
	display: block;
	float: left;
	margin-right: -2em;
	opacity: 0;
	width: 1em;
	z-index: -1;
}

input[type="checkbox"]+label,
input[type="radio"]+label {
	text-decoration: none;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	font-size: 1em;
	font-weight: 400;
	padding-left: 2.4em;
	padding-right: 0.75em;
	position: relative;
}

input[type="checkbox"]+label:before,
input[type="radio"]+label:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	font-style: normal;
	font-variant: normal;
	text-rendering: auto;
	line-height: 1;
	text-transform: none !important;
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
}

input[type="checkbox"]+label:before,
input[type="radio"]+label:before {
	background: rgba(144, 144, 144, 0.25);
	border-radius: 3px;
	content: '';
	display: inline-block;
	font-size: 0.8em;
	height: 2.0625em;
	left: 0;
	line-height: 2.0625em;
	position: absolute;
	text-align: center;
	top: 0;
	width: 2.0625em;
}

input[type="checkbox"]:checked+label:before,
input[type="radio"]:checked+label:before {
	background: #2e3842;
	color: #fff;
	content: '\f00c';
}

input[type="checkbox"]:focus+label:before,
input[type="radio"]:focus+label:before {
	box-shadow: 0 0 0 2px #21b2a6;
}

input[type="checkbox"]+label:before {
	border-radius: 3px;
}

input[type="radio"]+label:before {
	border-radius: 100%;
}

::-webkit-input-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

:-moz-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

::-moz-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

:-ms-input-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

/* Box */

.box {
	border-radius: 3px;
	border: solid 2px #fff;
	margin-bottom: 2em;
	padding: 1.5em;
}

.box> :last-child,
.box> :last-child> :last-child,
.box> :last-child> :last-child> :last-child {
	margin-bottom: 0;
}

.box.alt {
	border: 0;
	border-radius: 0;
	padding: 0;
}

/* Icon */

.icon {
	text-decoration: none;
	border-bottom: none;
	position: relative;
}

.icon:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	font-style: normal;
	font-variant: normal;
	text-rendering: auto;
	line-height: 1;
	text-transform: none !important;
	font-family: 'Font Awesome 5 Free';
	font-weight: 400;
}

.icon>.label {
	display: none;
}

.icon:before {
	line-height: inherit;
}

.icon.solid:before {
	font-weight: 900;
}

.icon.brands:before {
	font-family: 'Font Awesome 5 Brands';
}

.icon.major {
	-moz-transform: rotate(-45deg);
	-webkit-transform: rotate(-45deg);
	-ms-transform: rotate(-45deg);
	transform: rotate(-45deg);
	border-radius: 3px;
	border: solid 2px #fff;
	display: inline-block;
	font-size: 1.35em;
	height: calc(3em + 2px);
	line-height: 3em;
	text-align: center;
	width: calc(3em + 2px);
}

.icon.major:before {
	-moz-transform: rotate(45deg);
	-webkit-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	transform: rotate(45deg);
	display: inline-block;
	font-size: 1.5em;
}

@media screen and (max-width: 736px) {

	.icon.major {
		font-size: 1em;
	}

}

.icon.style1 {
	color: #00ffcc;
}

.icon.style2 {
	color: #00f0ff;
}

.icon.style3 {
	color: #76ddff;
}

/* Image */

.image {
	border-radius: 3px;
	border: 0;
	display: inline-block;
	position: relative;
}

.image img {
	border-radius: 3px;
	display: block;
}

.image.left {
	float: left;
	margin: 0 2em 2em 0;
	top: 0.25em;
}

.image.right {
	float: right;
	margin: 0 0 2em 2em;
	top: 0.25em;
}

.image.left,
.image.right {
	max-width: 40%;
}

.image.left img,
.image.right img {
	width: 100%;
}

.image.fit {
	display: block;
	margin: 0 0 2em 0;
	width: 100%;
}

.image.fit img {
	width: 100%;
}
/* ... */

